--- a/button.css
+++ b/button.css
@@ -1,4 +1,5 @@
 button {
+    background: #3DBFF0;
     height: 30px;
     width: 50%;
     outline: none;
@@ -6,7 +7,13 @@ button {
     border: none;
     border-radius: 2px;
   }
-  
+  button:active {
+    background: #e5e5e5;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+       -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+            box-shadow: inset 0px 0px 5px #c1c1c1;
+     outline: none;
+  }
   button.current {
     box-shadow: 0 0 0 2px white,
                 0 0 0 4px black;
